--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap"
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="/static/style.css" />
     <script src="/static/index.js" type="module" defer></script>
     <title>Ai Generated</title>
   </head>
   <body>
+    <div id="root"></div>
   </body>
 </html>
